--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   justify-content: left;
   padding: 30px;
   color: white;
-  background: url(image/bgnike.jpg) no-repeat center/cover;
+  background: url(bgnike.jpg) no-repeat center/cover;
 }
 
 .hero::before {
